crates/java-syntax/tests/snapshots/parser_events__parse_empty_enum.snap
---
source: crates/java-syntax/tests/parser_events.rs
expression: out
---
SOURCE:
enum E {}

TOKENS:
ENUM_KW "enum"
WHITESPACE " "
IDENTIFIER "E"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"


LEX_ERRORS:
<none>


EVENTS:
StartNode(ROOT, forward_parent=None)
StartNode(ENUM_DECL, forward_parent=None)
StartNode(MODIFIER_LIST, forward_parent=None)
FinishNode
AddToken
AddToken
StartNode(ENUM_BODY, forward_parent=None)
AddToken
AddToken
FinishNode
FinishNode
FinishNode


PARSE_ERRORS:
<none>
