crates/java-syntax/tests/snapshots/parser_events__parse_enum_constants_with_trailing_comma.snap
---
source: crates/java-syntax/tests/parser_events.rs
expression: out
---
SOURCE:
enum E { A, B, C, }

TOKENS:
ENUM_KW "enum"
WHITESPACE " "
IDENTIFIER "E"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
IDENTIFIER "A"
COMMA ","
WHITESPACE " "
IDENTIFIER "B"
COMMA ","
WHITESPACE " "
IDENTIFIER "C"
COMMA ","
WHITESPACE " "
R_BRACE "}"


LEX_ERRORS:
<none>


EVENTS:
StartNode(ROOT, forward_parent=None)
StartNode(ENUM_DECL, forward_parent=None)
StartNode(MODIFIER_LIST, forward_parent=None)
FinishNode
AddToken
AddToken
StartNode(ENUM_BODY, forward_parent=None)
AddToken
StartNode(ENUM_CONSTANT, forward_parent=None)
AddToken
FinishNode
AddToken
StartNode(ENUM_CONSTANT, forward_parent=None)
AddToken
FinishNode
AddToken
StartNode(ENUM_CONSTANT, forward_parent=None)
AddToken
FinishNode
AddToken
AddToken
FinishNode
FinishNode
FinishNode


PARSE_ERRORS:
<none>
