crates/java-syntax/tests/snapshots/parser_events__parse_import_decl.snap
---
source: crates/java-syntax/tests/parser_events.rs
expression: out
---
SOURCE:
import java.util.List;

TOKENS:
IMPORT_KW "import"
WHITESPACE " "
IDENTIFIER "java"
DOT "."
IDENTIFIER "util"
DOT "."
IDENTIFIER "List"
SEMICOLON ";"


LEX_ERRORS:
<none>


EVENTS:
StartNode(ROOT, forward_parent=None)
StartNode(IMPORT_DECL, forward_parent=None)
AddToken
StartNode(IMPORT_PATH, forward_parent=None)
AddToken
AddToken
AddToken
AddToken
AddToken
FinishNode
AddToken
FinishNode
FinishNode


PARSE_ERRORS:
<none>
